# PackMylib

./: README.md
mylib/: CMakeLists.txt  Makefile  MyLibConfig.cmake.in  example.cpp
mylib/myliba/: CMakeLists.txt
mylib/myliba/include/: liba.h
mylib/myliba/src/: liba.cpp
mylib/mylibb/: CMakeLists.txt
mylib/mylibb/include/: libb.h
mylib/mylibb/src/: libb.cpp
test/: CMakeLists.txt  main.cpp
